src/grid.scss
@import "variables";
@import "mixins";

.container {
  max-width: $grid-max-width;
  margin: 0 auto;
}

.container,
.container-fluid {
  padding: 0 $grid-gutter;
}

.row {
  box-sizing: border-box;
  display: flex;
  flex: 0 1 auto;
  flex-direction: row;
  flex-wrap: wrap;
  list-style: none;
  margin-left: -$grid-gutter;

  &.row--gutterless {
    margin-left: 0;
  }

  &.row--reverse {
    flex-direction: row-reverse;
  }
}

.col {
  padding-left: $grid-gutter;
  box-sizing: border-box;
  flex: 0 0 auto;
  flex-grow: 1;
  flex-basis: 0;
  max-width: 100%;

  .row--gutterless & {
    padding-left: 0;
  }

  &.col--reverse {
    flex-direction: column-reverse;
  }
}

@each $breakpoint in $breakpoints {
  $name: nth($breakpoint, 1);
  $declaration: nth($breakpoint, 2);

  @media only screen and #{$declaration} {
    @include grid-loop($name);
  }
}

